Fixed folder name bug